add group line in light

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  *= require products
  *= require projects
  *= require factories
+ *= require table_specification_lights
  */	
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
