--- a/app/assets/stylesheets/pdf.scss.erb
+++ b/app/assets/stylesheets/pdf.scss.erb
@@ -117,3 +117,7 @@ table {
 table, tr, td, th, tbody, thead, tfoot {
     page-break-inside: avoid;
 }
+.group_label {
+	background-color: #eee;
+	line-height: 10px;
+}
