--- a/app/assets/stylesheets/table_specification_lights.scss
+++ b/app/assets/stylesheets/table_specification_lights.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the TableSpecificationLights controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.group_label {
+	background-color: #ccc !important;
+}
