--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -7,6 +7,7 @@
     <%= label_tag(:print_sum, t('table.print_sum')) %>
     <%= check_box("print", @specification.id, {checked: @specification.print_sum}, @specification.id) %>
   </div>
+  <div class="add_group_line"><%= link_to 'Вставить разделитель', new_group_line_path(specification_id: @specification.id), remote: true %></div>
   
   <%= render 'table_specifications/photo/dialog' %>
   <%= render 'table_specifications/photo/dialog_table' %>
@@ -17,6 +18,7 @@
   <%= render 'table_specifications/delivery/dialog_table' %>
   <%= render 'table_specifications/packing_size/dialog' %>
   <%= render 'table_specifications/packing_size/dialog_table' %>
+  <%= render 'group_lines/dialog' %>
     
   <%= render 'table' %>
   <%= link_to t('table.new_row'), new_project_specification_table_specification_path, remote: true , class: "table-button btn btn-primary", id: "form_button" %>
