--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -40,115 +40,35 @@
       </tr>
     </thead>
     <tbody>
-      <% i = 0 %>
-      <% j = 0 %>
-      <% @table_specifications.each do |ts| %>
-        <% pst = [@project, @specification, ts] %>
-        <tr row-id="<%= ts.id %>" product-id="<%= ts.product_id %>">
-          <td class="npp">
-            <%= best_in_place pst, :order %>
-            <br>
-            <%= check_box("required", ts.id, {checked: ts.required}, ts.id) %>
-          </td>
-          <td class="photos"><%= render "table_specifications/photo/first_in_table", ts: ts %></td>
-          <td class="factory"><%= ts.product.brand_model.factory.brand if ts.product %></br>
-          <%= render "table_specifications/discount/percent", :"@discount" => ts.discount %>
-          </td>
-          <td><%= ts.product.brand_model.name if ts.product %></td>
-          <td><%= ts.product.article if ts.product %></td>
-          <td><%= best_in_place pst, :finishing_for_client, as: :textarea %></td>
-          <td>
-            <%= ts.product.type_furniture.name if ts.product %>
-            <br/>
-            <%= best_in_place pst, :description, as: :textarea %>
-          </td>
-          <td class="size_images">
-            <%= render "table_specifications/size_image/first_in_table", ts: ts %>
-            <br>
-            <%= best_in_place pst, :size, as: :textarea %></td>
-          <td><%= best_in_place pst, :unit_price_factory %></td>
-          <td><%= ts.summ_netto.round(2) %></td>
-          <td>
-            <%= best_in_place pst, :number_of %>
-            <%= ts.type_of_size_id.nil? ? Table.type_of_size[1] : Table.type_of_size[ts.type_of_size_id] %>
-          </td>
-          <td>
-            <p><%= best_in_place pst, :interest_percent %> %</p>
-            <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest.round(2) %></span> €</p>
-          </td>
-          <% if ts.group.nil? %>
-            <td class="full_price" ><%= ts.unit_price.round(2) %></td>
-            <td class="full_sum"><%= ts.summa.round(2) %></td>
-          <% else %>
-            <td class="full_price" ><%= ts.groupDataSum(ts.group, "gp_unit_sum").round(2) %></td>
-            <td class="full_sum" "<%= %>"><%= ts.groupDataSum(ts.group, "gp_sum_number").round(2) %></td>
-          <% end %>
-          <td class="v v_table">
-          <% unless ts.group.nil? %>
-            <% j = j + 1 %>
-          <% end %>
-          
-          <% if ts.group.nil? %>
-            <%= link_to image_tag('delivery.png'), '#', {class: "deliv invoker"} %>
-            <%= hidden_field_tag :delivery_id %>
-          <% elsif ts.add_row(@specification)[ts.group] == j %>
-            <%= link_to image_tag('delivery.png'), '#', {class: "deliv invoker"} %>
-            <%= hidden_field_tag :delivery_id %>
-            <% j = 0 %>
-          <% end %>
-            <div class="delivery_data">
-              <%= render 'table_specifications/delivery/data', :"@delivery_data" => Delivery.find(ts.delivery_id) %>
-            </div>
-            <% if ts.product then ts.product.width && ts.product.height && ts.product.depth  %>
-              <span class="unv"><%= ts.v_sum %></span>
-              <br>
-              <a class="shvg_percent invoker" href="#">ШВГ</a>
-              <br>
-            <% else %>
-              <span class="unv"><%= ts.v_sum if ts.product %></span>
-            <% end %>
-            <input type="hidden" class="unit_v" value="<%= ts.unit_v if ts.product %>">
-            <input type="hidden" name="table_specification[packing]" class="packing" value="0">
-            <input type="hidden" name="table_specification[add_to_delivery]" class="add_to_delivery" value="0">
-            <p>Гр.</p>
-            <span><%= best_in_place pst, :group %></span>
-          </td>
-          <td>
-            <p style="white-space:nowrap;">Интерес %: <br> <%= best_in_place pst, :arhitec_percent %>
-          </p>
-          <p>От заказа %: <span class="arh-order-percent"><%= ts.architector_percent_from_order.round(2) %></span><br>Интерес €: <span class="arh-interest-e"><%= ts.architector_interest.round(2) %></span></p>
-          <p>
-          	<%= link_to 'Удалить запись', pst, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-xs" %>
-          </p>
-          </td>
+
+     <!-- OUTPUT GROUP -->
+      <% @group_line.each do |gr| %>
+       <% psg = [@project, @specification, gr] %>
+        <tr>
+          <td class="group_label" colspan="16"><%= best_in_place gr, :name %></td>
         </tr>
-        <% unless ts.group.nil? %>
-          <% i = i + 1 %>
-            <% if ts.add_row(@specification)[ts.group] > 1 %>
-              <% if ts.add_row(@specification)[ts.group] == i %>
-                <% i = 0 %>
-                <tr>
-                  <td colspan="13"> Сумма за группу</td>
-                  <td class="sum_group"><span id="group_summa_<%= ts.group %>" data-html-attrs="<%= ts.group %>"><%= ts.groupDataSum(ts.group, "sum").round(2) %></td>
-                  <td></td>
-                  <td></td>
-                  
-                </tr>
-              <% end %>
-            <% end %>
-          <% end %>    
+        <% gr.tables.each do |ts| %>
+         <%= render 'table_each', ts: ts %>
+        <% end %>
+      <% end %>
+      <% @no_group_line.each do |ts| %>
+        <%= render 'table_each', ts: ts %>
+      <% end %>
+      <!--  -->
+      <% @table_specifications.each do |ts| %>
+    
         <% end %>
         <tr>
           <td colspan="13"> Сумма</td>
-          <td><%= @Model::specification_sum_all(@specification, "sum") %></td>
+          <td><%= @Model::specification_sum_all(@specification, "sum").round(2) %></td>
           <td></td>
-          <td><%= @Model::specification_sum_all(@specification, "architector_interest") %></td>
+          <td><%= @Model::specification_sum_all(@specification, "architector_interest").round(2) %></td>
         </tr>
         <tr>
           <td colspan="13"> Сумма выделенных</td>
-          <td><%= @Model::specification_sum_all(@specification, "sum", "selected") %></td>
+          <td><%= @Model::specification_sum_all(@specification, "sum", "selected").round(2) %></td>
           <td></td>
-          <td><%= @Model::specification_sum_all(@specification, "architector_interest", "selected") %></td>
+          <td><%= @Model::specification_sum_all(@specification, "architector_interest", "selected").round(2) %></td>
         </tr>
     </tbody>
   </table>
