add group line in table specification

--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -51,7 +51,7 @@
          <%= render 'table_each', ts: ts %>
         <% end %>
       <% end %>
-      <% @no_group_line.each do |ts| %>
+      <% @no_group_lines.each do |ts| %>
         <%= render 'table_each', ts: ts %>
       <% end %>
       <!--  -->
