--- a/app/views/specifications/_form.html.erb
+++ b/app/views/specifications/_form.html.erb
@@ -15,6 +15,11 @@
     <%= f.text_field :name, :class => "form-control first_input"  %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :currency, :class => "control-label" %>
+    <%= f.select :currency_id, options_for_select(Specification.currency.map{ |key, value| ["#{value}", "#{key}"] },  :selected => @specification.currency_id ) %>
+  </div>
+
  <div class="form-group">
     <%= f.submit  @specification.new_record? ? t('specification.create') : t('specification.update'), :class => "btn btn-primary" %>
    </div>
