--- a/app/views/table_specification_lights/_form.html.erb
+++ b/app/views/table_specification_lights/_form.html.erb
@@ -71,7 +71,7 @@
           <p>
           <%= f.number_field :interest_percent, {value: 30, class: "interest"} %> %
           </p>
-          <p style="white-space:nowrap;"><span class="interest-e">0</span> &euro;</p>
+          <p style="white-space:nowrap;"><span class="interest-e">0</span> <%= @current_currency[0] %></p>
         </td>
         <td class="full_price">0</td>
         <td class="full_sum">0</td>
@@ -80,7 +80,7 @@
         <td class="architector"><p style="white-space:nowrap;">Интерес %: 
           <%= f.number_field :arhitec_percent, {value: 50, class: "arh-interest"}%>
           </p>
-          <p>От заказа %: <span class="arh-order-percent">15</span><br>Интерес &euro;: <span class="arh-interest-e">0</span></p>
+          <p>От заказа %: <span class="arh-order-percent">15</span><br>Интерес <%= @current_currency[0] %>: <span class="arh-interest-e">0</span></p>
         </td>
 
       </tr>
