--- a/app/views/table_specification_lights/_table.html.erb
+++ b/app/views/table_specification_lights/_table.html.erb
@@ -31,8 +31,8 @@
         <th class="factory-sum">Сумма в 0</th>
         <th class="number_of">Кол-во</th>
         <th class="interest">Интерес</th>
-        <th class="full_price">Цена, &euro;</th>
-        <th class="full_sum">Сумма, &euro;</th>
+        <th class="full_price">Цена, <%= @current_currency[0] %> </th>
+        <th class="full_sum">Сумма, <%= @current_currency[0] %> </th>
         <th class="architector">Архитектор</th>
       </tr>
      </thead>
