--- a/app/views/table_specification_lights/index.html.erb
+++ b/app/views/table_specification_lights/index.html.erb
@@ -4,6 +4,7 @@
 	  <p id="notice"><%= notice %></p>
 	  <%= link_to t('table.print_pdf'), project_specification_table_specification_lights_path(@project, @specification, @table_specification_light, format: "pdf") %>
 	  <%= link_to 'PDF выбранные', project_specification_index_selected_light_pdf_path(@project, @specification, @table_specification, format: "pdf") %>
+	  | Валюта спецификации: <%= Specification.currency[@specification.currency_id] %>
 	  <div class="print_sum">
 	    <%= label_tag(:print_sum, t('table.print_sum')) %>
 	    <%= check_box("print", @specification.id, {checked: @specification.print_sum}, @specification.id) %>
