--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -3,6 +3,7 @@
   <p id="notice"><%= notice %></p>
     <%= link_to t('table.print_pdf'), project_specification_table_specifications_path(@project, @specification, @table_specification, format: "pdf") %>
     <%= link_to 'PDF выбранные', project_specification_index_selected_pdf_path(@project, @specification, @table_specification, format: "pdf") %>
+    | Валюта спецификации: <%= Specification.currency[@specification.currency_id] %>
   <div class="print_sum">
     <%= label_tag(:print_sum, t('table.print_sum')) %>
     <%= check_box("print", @specification.id, {checked: @specification.print_sum}, @specification.id) %>
