--- a/app/views/table_specification_lights/_form.html.erb
+++ b/app/views/table_specification_lights/_form.html.erb
@@ -80,7 +80,7 @@
         <td class="architector"><p style="white-space:nowrap;">Интерес %: 
           <%= f.number_field :arhitec_percent, {value: 50, class: "arh-interest"}%>
           </p>
-          <p>От заказа %: <span class="arh-order-percent">15</span><br>Интерес <%= @current_currency[0] %>: <span class="arh-interest-e">0</span></p>
+          <p>От заказа %: <span class="arh-order-percent">15</span><br>Интере: <span class="arh-interest-e">0</span></p>
         </td>
 
       </tr>
