--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -33,8 +33,8 @@
         <th class="factory-sum">Сумма фаб-ки</th>
         <th class="number_of">Кол-во</th>
         <th class="interest">Интерес</th>
-        <th class="full_price">Цена, &euro;</th>
-        <th class="full_sum">Сумма, &euro;</th>
+        <th class="full_price">Цена, <%= @current_currency[0] %></th>
+        <th class="full_sum">Сумма, <%= @current_currency[0] %></th>
         <th class="v">V</th>
         <th class="architector">Архитектор</th>
       </tr>
