--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -34,17 +34,17 @@
 			<% if @specification.size %>	 			
 				<th width="<%= @css_print["size"] %>%">Размер</th> <% end %>
 			<% if @specification.upf %> 				
-				<th width="<%= @css_print["upf"] %>%">Цена Фа-ки</th> <% end %>
+				<th width="<%= @css_print["upf"] %>%">Цена Фа-ки <br> (<%= @current_currency[1..5] %>)</th> <% end %>
 			<% if @specification.sum_factory %> 
-				<th width="<%= @css_print["sum_factory"] %>%">Сумма фабрики</th> <% end %>
+				<th width="<%= @css_print["sum_factory"] %>%">Сумма фабрики <br> (<%= @current_currency[1..5] %>)</th> <% end %>
 			<% if @specification.number_of %>	  
 				<th width="<%= @css_print["number_of"] %>%">Ко-во</th> <% end %>
 			<% if @specification.interest %>	  
-				<th width="<%= @css_print["interest"] %>%">Интерес</th> <% end %>
+				<th width="<%= @css_print["interest"] %>%">Интерес <br> (<%= @current_currency[1..5] %>)</th> <% end %>
 			<% if @specification.full_price %>	
-				<th width="<%= @css_print["full_price"] %>%">Цена</th> <% end %>
+				<th width="<%= @css_print["full_price"] %>%">Цена <br> (<%= @current_currency[1..5] %>)</th> <% end %>
 			<% if @specification.full_sum %>		
-				<th width="<%= @css_print["full_sum"] %>%">Сумма</th> <% end %>
+				<th width="<%= @css_print["full_sum"] %>%">Сумма <br> (<%= @current_currency[1..5] %>)</th> <% end %>
 			<% if @specification.v %>						
 				<th width="<%= @css_print["v"] %>%">Объем</th> <% end %>
 			<% if @specification.architector %>	
