--- a/app/views/table_specification_lights/_form.html.erb
+++ b/app/views/table_specification_lights/_form.html.erb
@@ -71,7 +71,7 @@
           <p>
           <%= f.number_field :interest_percent, {value: 30, class: "interest"} %> %
           </p>
-          <p style="white-space:nowrap;"><span class="interest-e">0</span> <%= @current_currency[0] %></p>
+          <p style="white-space:nowrap;"><span class="interest-e">0</span> </p>
         </td>
         <td class="full_price">0</td>
         <td class="full_sum">0</td>
