realease Note in tables & disabled execution document, default value: 0

--- a/app/assets/stylesheets/table_specifications.scss
+++ b/app/assets/stylesheets/table_specifications.scss
@@ -90,13 +90,13 @@
 		width: 9.9%;
 	}
 	.factory {
-		width: 8.42% !important;
+		width: 7.42% !important;
 	}
 	.model {
-		width: 8.42% !important;
+		width: 7.42% !important;
 	}
 	.article {
-		width: 8.42% !important;
+		width: 6.42% !important;
 	}
 	.finishing_for_client {
 		width: 8.58%;
@@ -129,7 +129,10 @@
 		width: 3.5%;
 	}
 	.architector {
-		width: 9.26%;
+		width: 7.26%;
+	}
+	.note {
+		width: 6%;
 	}
 
 	/*----------------------*/
