--- a/app/views/table_specifications/_table_each.html.erb
+++ b/app/views/table_specifications/_table_each.html.erb
@@ -72,6 +72,7 @@
     <p>Гр.</p>
     <span><%= best_in_place pst, :group %></span>
   </td>
+  <td><%= best_in_place pst, :note, as: :textarea %></td>
   <td>
     <p style="white-space:nowrap;">Интерес %: <br> <%= best_in_place pst, :arhitec_percent %>
   </p>
