--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -97,6 +97,9 @@
           <input type="hidden" name="table_specification[add_to_delivery]" class="add_to_delivery" value="0">
 
         </td>
+        <td class="note">
+          <%= f.text_area :note %>
+        </td>
         <td class="architector"><p style="white-space:nowrap;">Интерес %: 
           <%= f.number_field :arhitec_percent, {value: 50, class: "arh-interest"}%>
           </p>
