--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -18,6 +18,7 @@
         <th><%= check_box("full_price", @specification.id, {checked: @specification.full_price, column: "full_price"}) %></th>
         <th><%= check_box("full_sum", @specification.id, {checked: @specification.full_sum, column: "full_sum"}) %></th>
         <th><%= check_box("v", @specification.id, {checked: @specification.v, column: "v"}) %></th>
+        <th><%= check_box("note", @specification.id, {checked: @specification.note, column: "note"}) %></th>
         <th><%= check_box("architector", @specification.id, {checked: @specification.architector, column: "architector"}) %></th>
       </tr>
       <tr>
@@ -36,6 +37,7 @@
         <th class="full_price">Цена, <%= @current_currency[0] %></th>
         <th class="full_sum">Сумма, <%= @current_currency[0] %></th>
         <th class="v">V</th>
+        <th class="note">Заметки</th>
         <th class="architector">Архитектор</th>
       </tr>
     </thead>
@@ -45,7 +47,7 @@
       <% @group_lines.each do |gr| %>
        <% psg = [@project, @specification, gr] %>
         <tr>
-          <td class="group_label" colspan="16"><%= best_in_place gr, :name %></td>
+          <td class="group_label" colspan="17"><span style="float: left"><%= best_in_place gr, :numbering %></span><%= best_in_place gr, :name %></td>
         </tr>
         <% gr.tables.each do |ts| %>
          <%= render 'table_each', ts: ts %>
@@ -59,16 +61,20 @@
     
         <% end %>
         <tr>
-          <td colspan="13"> Сумма</td>
+          <td colspan="12"> Сумма</td>
           <td><%= @Model::specification_sum_all(@specification, "sum").round(2) %></td>
           <td></td>
           <td><%= @Model::specification_sum_all(@specification, "architector_interest").round(2) %></td>
+          <td></td>
+          <td></td>
         </tr>
         <tr>
-          <td colspan="13"> Сумма выделенных</td>
+          <td colspan="12"> Сумма выделенных</td>
           <td><%= @Model::specification_sum_all(@specification, "sum", "selected").round(2) %></td>
           <td></td>
           <td><%= @Model::specification_sum_all(@specification, "architector_interest", "selected").round(2) %></td>
+          <td></td>
+          <td></td>
         </tr>
     </tbody>
   </table>
