--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -80,4 +80,4 @@
 	</tbody>
 </table>
 <p> * Примечание:</p>
-<p> - цены ябвляются актуальными на момент составления сметы</p>
+<p> - цены являются актуальными на момент составления сметы</p>
