--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -79,5 +79,7 @@
 		</tr>
 	</tbody>
 </table>
-<p> * Примечание:</p>
-<p> - цены являются актуальными на момент составления сметы</p>
+<div class="specification_note">
+	<p class="note_title"> * Примечание:</p>
+	<p class="note_text"> - цены являются актуальными на момент составления сметы.</p>
+</div>
