--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
  *= require projects
  *= require factories
  *= require table_specification_lights
+ *= require specifications
  */	
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
