--- a/app/assets/stylesheets/pdf.scss.erb
+++ b/app/assets/stylesheets/pdf.scss.erb
@@ -121,3 +121,12 @@ table, tr, td, th, tbody, thead, tfoot {
 	background-color: #eee;
 	line-height: 10px;
 }
+.specification_note {
+	font-size: 12px;
+}
+.note_title {
+	font-weight: bold;
+}
+.note_text {
+	font-style: italic;
+}
