--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -18,7 +18,7 @@
 	<td class="column1">
 		<div class="accordion-body collapse hidden<%= project.id %>">
 			<div>Город</div>
-			<div><%= project.city.name %></div>
+			<div><%# project.city.name %></div>
 		</div>
 	</td>
 	<td class="column2">
