--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -2,11 +2,11 @@
 	<td class="column1"><%= link_to project.object_name, project %></td>
 	<td class="column2"><%= project.client %></td>
 	<td class="column3"><%= project.created_at %></td>
-	<% if project.status != @last_status %>
+	<%# if project.status != @last_status %>
     	<td class="column4"><%= link_to project.status, new_project_status_path(project), remote: true %></td>  
-	<% else %>
+	<%# else %>
 		<td class="column4"><%= project.status %></td>
-	<% end %>
+	<%# end %>
 	<td class="column5"><%= project.status_description %></td>
 	<td class="column6"><%= project.deadline %></td>
 	<td class="column7"><%= best_in_place [project], :planned_budget %></td>
