--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,9 +5,8 @@
   	<% end %>
   </td>
   <% p product.id %>
-  <td><%#= product.brand_model.factory.brand %></td>
-  <td><%= product.id %></td>
-  <td><%#= product.brand_model.name %></td>
+  <td><%= product.brand_model.factory.brand %></td>
+  <td><%= product.brand_model.name %></td>
   <td><%= product.article %></td>
   <td><%= product.type_furniture.name %></td>
   <td><%= product.price %></td>
