--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,8 +4,8 @@
   <div class="row">
     <div class="form-group col-sm-6" id="factory">
       <div class="form-group" id="type_furniture">
-        <%= label_tag :factories_select, 'Фабрика', :class => "control-label" %><br>
-        <%= f.select :factory_id,
+        <%#= label_tag :factories_select, 'Фабрика', :class => "control-label" %><br>
+        <%#= f.select :factory_id,
             @factories.map { |o| 
             [o.brand, o.id, {"id" => o.id}]},
             { include_blank: true },
@@ -14,8 +14,8 @@
         %>
         </div>
         <div class="form-group" id="brand_model">
-          <%= label_tag :products_select,'Модель', :class => "control-label" %><br>
-          <%= f.select :brand_model_id,
+          <%#= label_tag :products_select,'Модель', :class => "control-label" %><br>
+          <%#= f.select :brand_model_id,
               @brand_models.map { |o| 
               [o.name, o.id, {"id" => o.id}]},
               { include_blank: true },
